# legal-doc-analyser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: sample_employment_offer.docx  sample_nda.txt
src/legal_doc_analyser/: __init__.py  batch.py  cli.py  extract.py  loaders.py  report.py  schema.py
tests/: test_extract.py  test_loaders.py  test_report.py  test_schema.py
